crates/analyzer/tests/snapshots/errors__assign_type_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: mismatched types
  ┌─ [snippet]:4:3
  │
4 │   x = address(0)
  │   ^   ---------- this value has incompatible type `address`
  │   │    
  │   this has type `u256`


